# CodeSample

./: .gitignore  README.md  build.gradle  settings.gradle  未命名绘图.drawio
opencl_demo/: build.gradle
opencl_demo/jni/: Android.mk  Application.mk  CMakeLists.txt  ImageSobelFilter.cpp  aopencl.c
opencl_demo/jni/CL/: cl.hpp
opencl_demo/src/main/: AndroidManifest.xml
opencl_demo/src/main/java/com/white/imagesobelfilter/: ImageSobelFilter.java
opencl_demo/src/main/res/values/: strings.xml
